# ChangeLog for dev-libs/libgpg-error
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.61 2008/01/21 20:31:06 jer Exp $

  21 Jan 2008; Jeroen Roovers <jer@gentoo.org> libgpg-error-1.6.ebuild:
  Stable for HPPA (bug #206667).

  20 Jan 2008; Raúl Porcel <armin76@gentoo.org> libgpg-error-1.6.ebuild:
  alpha/ia64/sparc/x86 stable wrt #206667

  20 Jan 2008; Christoph Mende <angelos@gentoo.org> libgpg-error-1.6.ebuild:
  Stable on amd64 wrt bug #206667

  20 Jan 2008; nixnut <nixnut@gentoo.org> libgpg-error-1.6.ebuild:
  Stable on ppc wrt bug 206667

  20 Jan 2008; Brent Baude <ranger@gentoo.org> libgpg-error-1.6.ebuild:
  Marking libgpg-error-1.6 ppc64 for bug 206667

  02 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org> libgpg-error-1.5.ebuild,
  libgpg-error-1.6.ebuild:
  Fix home page, bug#204078, thanks to Arfrever Frehtes Taifersar Arahesis

*libgpg-error-1.6 (02 Nov 2007)

  02 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org> +libgpg-error-1.6.ebuild:
  Version bump

  07 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -files/libgpg-error-1.0-locale.h.patch, -files/libgpg-error-1.3-nls.patch,
  -libgpg-error-1.0-r1.ebuild, -libgpg-error-1.1.ebuild,
  -libgpg-error-1.3.ebuild, -libgpg-error-1.3-r1.ebuild,
  -libgpg-error-1.4.ebuild:
  Cleanup

  07 Jun 2007; Raúl Porcel <armin76@gentoo.org> libgpg-error-1.5.ebuild:
  alpha stable wrt #177743

  19 May 2007; Daniel Gryniewicz <dang@gentoo.org> libgpg-error-1.5.ebuild:
  Marked stable on amd64 for bug #177743

  13 May 2007; nixnut <nixnut@gentoo.org> libgpg-error-1.5.ebuild:
  Stable on ppc wrt bug 177743

  12 May 2007; Markus Rothe <corsair@gentoo.org> libgpg-error-1.5.ebuild:
  Stable on ppc64; bug #177743

  10 May 2007; Jeroen Roovers <jer@gentoo.org> libgpg-error-1.5.ebuild:
  Stable for HPPA (bug #177743).

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> libgpg-error-1.5.ebuild:
  x86 stable
