@@ -1,6 +1,8 @@
 DIST libgpg-error-1.5.tar.bz2 372516 RMD160 1ba7f27ff1718a26038f48a288d391f08ef3b194 SHA1 1f83d9af8e8ed3bcbf3a5e9018db257dc6336655 SHA256 b31f848408fa99a7e5c4ec134f36ba25ee482642482a92e4e752eba51cbc9e8b
 DIST libgpg-error-1.6.tar.bz2 382110 RMD160 5015a9e0a9c59fe5e9a45d203c324af3736c5d68 SHA1 2f387d0c34dd55eaf3b5f3c2570e9033eb540bc3 SHA256 aa7df632134dfd3d4e65f5a98edd6bb9a97b498db911f4287bbaeb5ae83a1bad
+DIST libgpg-error-1.7.tar.bz2 403751 RMD160 6f9004baf8e707b5995a276b5a454102405a6afc SHA1 bf8c6babe1e28cae7dd6374ca24ddcc42d57e902 SHA256 0301331b3e82f552c60c449388dc6d55d68cff4efa84523b352c4d522f4b5a91
 EBUILD libgpg-error-1.5.ebuild 863 RMD160 898959ecbf1a38b926ee516fd2de046551e84111 SHA1 ca0e3b9f0519c7a13daacb3bc6f2b1ad418704cb SHA256 ab5b8f094554c27e1490640371f4440d008df96796c0f153b513bc597a143bd9
 EBUILD libgpg-error-1.6.ebuild 936 RMD160 3fab1d0cadfcbb6f39b3eecf8cabf5abcb3832ba SHA1 42e7533c03958c7d8a8e1d254f770907887d43c3 SHA256 40b522613463b34d5b597d84095e631994fbdf4ce84f0d0ebf35bfc9c45009d4
-MISC ChangeLog 8159 RMD160 a3d970fc2eafdfb5d492cf78423ff59b8118d07a SHA1 212bcb651706d773e23d06c29147c823aa1ea49f SHA256 dd2afd75ac9dd3366d6d51b54eb7e8d5972bebde5323f3cda0dc603da63b48bc
+EBUILD libgpg-error-1.7.ebuild 962 RMD160 082b6e9f409ccf587c642adff103a1fed4d5a8f1 SHA1 a3805d9297d482b62cec923132aae15357f1c79b SHA256 bb7ce3b3e13c8eed028ef4bf9acf91b6843fa6bc2840166b68d6bd784bc7fc6d
+MISC ChangeLog 8315 RMD160 21c5e002bf2250b81f59e58feefd40b275070ea9 SHA1 75557115082b597b14a135c5e187e59fc1aa9bb2 SHA256 97bb132e57a94ab686dd1ecd6a4ace6586dddea2a6ed8b379d148eb9b09ea677
 MISC metadata.xml 250 RMD160 6dcb0cedacaf21e461c4d2636bf573be7d71327e SHA1 790b87b4fb52da89abcd34c02bf1eb607e986fc3 SHA256 d8e12e3cf9acd8a2dd8fefb591273fece4b80f7a93a569274b6d94e84934308b
