@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libgpg-error
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.61 2008/01/21 20:31:06 jer Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.62 2009/04/09 21:24:00 arfrever Exp $
+
+*libgpg-error-1.7 (09 Apr 2009)
+
+  09 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +libgpg-error-1.7.ebuild:
+  Version bump.
 
   21 Jan 2008; Jeroen Roovers <jer@gentoo.org> libgpg-error-1.6.ebuild:
   Stable for HPPA (bug #206667).
